--- a/DataVisualization/lol_winrate/src/App.css
+++ b/DataVisualization/lol_winrate/src/App.css
@@ -1,3 +1,8 @@
+.App {
+  width: 100vw;
+  height: 100vh;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -17,7 +22,8 @@ table {
   border-collapse: collapse;
 }
 
-th, td {
+th,
+td {
   padding: 10px;
   border: 1px solid #ddd;
   text-align: left;
